# create-python-server

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: shared.yml
src/create_mcp_server/: __init__.py
src/create_mcp_server/template/: README.md.jinja2  __init__.py  server.py  server.py.jinja2
