[project]
name = "create-mcp-server"
version = "1.0.0"
description = "Create an MCP server project from a template."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["click>=8.1.7", "packaging>=24.2"]

[project.scripts]
create-mcp-server = "create_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
artifacts = ["template"]

[tool.uv]
dev-dependencies = ["ruff>=0.7.4"]
