[project]
name = "create-mcp-server"
version = "1.0.3.dev0"
description = "Create an MCP server project from a template."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "jinja2>=3.1.4",
    "packaging>=24.2",
    "toml>=0.10.2",
]

[project.scripts]
create-mcp-server = "create_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
artifacts = ["src/create_mcp_server/template"]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.389",
    "ruff>=0.7.4",
]
